--- a/ConfiguracionUsuarios/ProdModFall.xaml
+++ b/ConfiguracionUsuarios/ProdModFall.xaml
@@ -44,7 +44,7 @@
                         </Grid.RowDefinitions>
                         <ListBox x:Name="Proli" FontFamily="Consolas" FontSize="14" Foreground="Black"/>
                         <materialDesign:ColorZone Mode="PrimaryMid" Grid.Row="1">
-                            <TextBlock Margin="16">PRODUCTOS</TextBlock>
+                            <TextBlock Margin="16" Style="{StaticResource MaterialDesignBody2TextBlock}">PRODUCTOS</TextBlock>
                         </materialDesign:ColorZone>
                         <Button Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" VerticalAlignment="Bottom" HorizontalAlignment="Right" Grid.Row="0" Margin="0 0 75 -20">
                             <materialDesign:PackIcon Kind="Pencil" Height="22" Width="22" />
@@ -64,7 +64,7 @@
                         </Grid.RowDefinitions>
                         <ListBox x:Name="Moli" FontFamily="Consolas" FontSize="14"/>
                         <materialDesign:ColorZone Mode="PrimaryMid" Grid.Row="1" Effect="{DynamicResource MaterialDesignShadowDepth5}">
-                            <TextBlock Margin="16">MODELOS</TextBlock>
+                            <TextBlock Margin="16" Style="{StaticResource MaterialDesignBody2TextBlock}">MODELOS</TextBlock>
                         </materialDesign:ColorZone>
                         <Button Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" VerticalAlignment="Bottom" HorizontalAlignment="Right" Grid.Row="0" Margin="0 0 75 -20">
                             <materialDesign:PackIcon Kind="Pencil" Height="22" Width="22" />
@@ -83,7 +83,7 @@
                         </Grid.RowDefinitions>
                         <ListBox x:Name="Cali" FontFamily="Consolas" FontSize="14"/>
                         <materialDesign:ColorZone Mode="PrimaryMid" Grid.Row="1" Effect="{DynamicResource MaterialDesignShadowDepth5}">
-                            <TextBlock Margin="16">CATEGORIAS</TextBlock>
+                            <TextBlock Margin="16" Style="{StaticResource MaterialDesignBody2TextBlock}">CATEGORIAS</TextBlock>
                         </materialDesign:ColorZone>
                         <Button Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" VerticalAlignment="Bottom" HorizontalAlignment="Right" Grid.Row="0" Margin="0 0 75 -20">
                             <materialDesign:PackIcon Kind="Pencil" Height="22" Width="22" />
@@ -102,7 +102,7 @@
                         </Grid.RowDefinitions>
                         <ListBox x:Name="Fall" FontFamily="Consolas" FontSize="14"/>
                         <materialDesign:ColorZone Mode="PrimaryMid" Grid.Row="1" Effect="{DynamicResource MaterialDesignShadowDepth5}">
-                            <TextBlock Margin="16">FALLAS</TextBlock>
+                            <TextBlock Margin="16" Style="{StaticResource MaterialDesignBody2TextBlock}">FALLAS</TextBlock>
                         </materialDesign:ColorZone>
                         <Button Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" VerticalAlignment="Bottom" HorizontalAlignment="Right" Grid.Row="0" Margin="0 0 75 -20">
                             <materialDesign:PackIcon Kind="Pencil" Height="22" Width="22" />
@@ -121,7 +121,7 @@
                         </Grid.RowDefinitions>
                         <ListBox x:Name="Ordenes" FontFamily="Consolas" FontSize="14"/>
                         <materialDesign:ColorZone Mode="PrimaryMid" Grid.Row="1" Effect="{DynamicResource MaterialDesignShadowDepth5}">
-                            <TextBlock Margin="16">ORDENES</TextBlock>
+                            <TextBlock Margin="16" Style="{StaticResource MaterialDesignBody2TextBlock}">ORDENES</TextBlock>
                         </materialDesign:ColorZone>
                         <Button Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" VerticalAlignment="Bottom" HorizontalAlignment="Right" Grid.Row="0" Margin="0 0 75 -20">
                             <materialDesign:PackIcon Kind="Pencil" Height="22" Width="22" />
